--- a/index.html
+++ b/index.html
@@ -952,7 +952,13 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <div class="d-flex flex-column flex-wrap gap-1">
+                        <div class="d-flex flex-column flex-wrap gap-0">
+                            <div class="d-flex flex-row gap-1 justify-content-center flex-wrap">
+                                <button class="btn btn-primary" onclick="editor.temp.selectedLayer.zoom=1;editor.temp.selectedLayer.flush();editor.saveHistory(); wcSyncHandler.sync(this.closest('.modal'))">ZOOM:100%</button>
+                                <button class="btn btn-primary" onclick="editor.temp.selectedLayer.postionCenterCenter();editor.temp.selectedLayer.flush();editor.saveHistory(); wcSyncHandler.sync(this.closest('.modal'))">CENTERxCENTER</button>
+                                <button class="btn btn-primary" onclick="editor.temp.selectedLayer.adjustSize(editor.temp.selectedLayer.parent.width,editor.temp.selectedLayer.parent.height);editor.temp.selectedLayer.flush();editor.saveHistory(); wcSyncHandler.sync(this.closest('.modal'))">ADJUST SIZE TO DOCUMENT</button>
+                            </div>
+                            <hr>
                             <form name="form_layer_resize" class="flex-fill" action="" onsubmit="
                                 if(editor.temp?.selectedLayer){
                                     const layer = editor.temp.selectedLayer
@@ -1018,11 +1024,7 @@
                                     <input class="form-control" type="number" name="top" placeholder="top" min="-10000" max="10000">
                                 </div>
                             </form>
-                            <hr>
-                            <div class="d-flex flex-row gap-1 justify-content-center flex-wrap">
-                                <button class="btn btn-primary" onclick="editor.temp.selectedLayer.zoom=1;editor.temp.selectedLayer.flush();editor.saveHistory(); wcSyncHandler.sync(this.closest('.modal'))">ZOOM:100%</button>
-                                <button class="btn btn-primary" onclick="editor.temp.selectedLayer.postionCenterCenter();editor.temp.selectedLayer.flush();editor.saveHistory(); wcSyncHandler.sync(this.closest('.modal'))">CENTERxCENTER</button>
-                            </div>
+    
                         </div>
                     </div>
                 </div>
